force-app/main/default/objects/Opp_Team_Member__c/Opp_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Opp Team Member</label>
    <pluralLabel>Opp Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>OTM-{00000}</displayFormat>
    </nameField>
</CustomObject>