force-app/main/default/objects/Opp_Team_Member__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <label>Member Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>