force-app/main/default/objects/Opp_Team_Member__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>