force-app/main/default/objects/Opp_Team_Member__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunitys</relationshipLabel>
    <relationshipName>Opp_Team_Members</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>