force-app/main/default/objects/Opp_Team_Member__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Deal Owner</fullName>
                </value>
                <value>
                    <fullName>Primary SE</fullName>
                </value>
                <value>
                    <fullName>Supporting SE</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>